# treefrog

./: 404.html  README.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml  tasks.py  test.py
.github/workflows/: build.yml  publish.yml
api/: index.html
docs/: README.md  documentation.md
documentation/: index.html
examples/: neutral_wins.py
reference/treefrog/: index.html
reference/treefrog/cli/: index.html
reference/treefrog/organize/: index.html
reference/treefrog/parse/: index.html
reference/treefrog/parse/parsers/: index.html
reference/treefrog/parse/utils/: index.html
reference/treefrog/rename/: index.html
reference/treefrog/tree/: index.html
search/: search_index.json
slp/: Game_20200615T235454.slp  Game_20200615T235839.slp  Game_20200630T105204.slp  Game_20200630T192520.slp  Game_20200705T120753.slp  Game_20200710T221459.slp  Game_20200712T000949.slp  Game_20200715T133859.slp  Game_20200717T195253.slp  Game_20200720T142558.slp  Game_20200721T000452.slp  Game_20200725T140710.slp  Game_20200726T001104.slp  Game_20200901T220837.slp  Game_20200919T001906.slp  Game_20200919T002222.slp  Game_20200919T002512.slp  Game_20200919T002811.slp  Game_20200919T003021.slp  Game_20200919T003251.slp  Game_20200919T003545.slp  Game_20200919T004213.slp  Game_20200919T004504.slp  Game_20200919T004706.slp  Game_20200919T004953.slp  Game_20200919T005224.slp  Game_20201013T220300.slp  Game_20201029T114450.slp  Game_20201107T204615.slp
tests/: test_foo.py  test_operations.py
treefrog/: __init__.py  __main__.py  cli.py  format.py  hierarchy.py  organize.py  parse.py  rename.py  tree.py
treefrog/flatten/: __main__.py
treefrog/organize/: __init__.py  __main__.py  attribute.py  format.py  hierarchy.py  tree.py
treefrog/parse/: __init__.py  parsers.py  utils.py
treefrog/rename/: __init__.py  __main__.py
