[tool.poetry]
name = "treefrog"
version = "0.0.1"
description = ""
authors = ["Dawson Booth <pypi@dawsonbooth.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dawsonbooth/treefrog"
repository = "https://github.com/dawsonbooth/treefrog"
keywords = []
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE",
]
packages = [
    { include = "treefrog" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
autopep8 = "^1.5"
pylint = "^2.4.4"
rope = "^0.17.0"
mkdocs = "^1.1.2"
pydoc-markdown = "^3.3.0"
invoke = "^1.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
